certifications_style.css
body {
  background-color: #0d1117;
  color: white;
}

h2 {
  padding-left: 10px;
  color: white;
}

.issuer-name {
  color: #5ad1a5;
  text-align: left;
  padding-left: 90px;
}

a {
  color: #58a6ff;
  text-decoration: none;
  padding-left: 30px;
}

a:hover {
  color: #5ad1a5;
  text-decoration: underline;
}

a:visited {
  color: #3b82f6;
}

